--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/LandingPage.css" />
+    <link rel="stylesheet" href="styles/Footer.css" />
 
     <title>Swiggy Clone</title>
   </head>
@@ -138,38 +139,93 @@
       <div class="car">
         <div>
           <img
-            style="width: 105px; height: 199px"
-            src="https://web.archive.org/web/20210903175337im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_210,h_398/4x_-_No_min_order_x0bxuf"
+            style="width: 112px; height: 206px"
+            src="https://web.archive.org/web/20210903175338im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_224,h_412/4x_Live_order_zzotwy"
           />
         </div>
         <div>
-          <h3>No Minimum Order</h3>
+          <h3>Live Order Tracking</h3>
         </div>
         <div>
           <p>
-            Order in for yourself or for the group, with no restrictions on
-            order value
+            Know where your order is at all times, from the restaurant to your
+            doorstep
           </p>
         </div>
       </div>
       <div class="car">
         <div>
           <img
-            style="width: 105px; height: 199px"
-            src="https://web.archive.org/web/20210903175337im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_210,h_398/4x_-_No_min_order_x0bxuf"
+            style="width: 124px; height: 188px"
+            src="https://web.archive.org/web/20210903175339im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_248,h_376/4x_-_Super_fast_delivery_awv7sn"
           />
         </div>
         <div>
-          <h3>No Minimum Order</h3>
+          <h3>Lightning-Fast Delivery</h3>
         </div>
         <div>
           <p>
-            Order in for yourself or for the group, with no restrictions on
-            order value
+            Experience Swiggy's superfast delivery for food delivered fresh & on
+            time
           </p>
         </div>
       </div>
     </div>
+    <main class="footer_1">
+      <div class="div1">
+        <h3>COMPANY</h3>
+        <div class="div1_list">
+          <div class="div1_list_p1">About Us</div>
+          <div class="div1_list_p1">Team</div>
+          <div class="div1_list_p1">Careers</div>
+          <div class="div1_list_p1">Swiggy Blog</div>
+          <div class="div1_list_p1">Bug Bounty</div>
+          <div class="div1_list_p1">Swiggy One</div>
+          <div class="div1_list_p1">Swiggy Corporate</div>
+          <div class="div1_list_p1">Swiggy Instamart</div>
+        </div>
+      </div>
+      <div class="div2">
+        <h3>CONTACT</h3>
+        <div class="div2_list">
+          <div class="div2_list_p2">Help & Support</div>
+          <div class="div2_list_p2">Partner with us</div>
+          <div class="div2_list_p2">Ride with us</div>
+        </div>
+      </div>
+      <div class="div3">
+        <h3>LEGAL</h3>
+        <div class="div3_list">
+          <div class="div3_list_p3">Terms & Conditions</div>
+          <div class="div3_list_p3">Refund & Cancellation</div>
+          <div class="div3_list_p3">Privacy Policy</div>
+          <div class="div3_list_p3">Cookie Policy</div>
+          <div class="div3_list_p3">Offer Terms</div>
+          <div class="div3_list_p3">Phishing & Fraud</div>
+        </div>
+      </div>
+      <div class="div4">
+        <div>
+          <a
+            href="https://play.google.com/store/apps/details?id=in.swiggy.android"
+            ><img
+              class="foot_icon"
+              style="width: 200px; height: 65px"
+              src="https://web.archive.org/web/20210903174711im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_200,h_65/icon-AppStore_lg30tv"
+          /></a>
+        </div>
+
+        <div>
+          <a
+            href="https://itunes.apple.com/in/app/swiggy-food-order-delivery/id989540920"
+            ><img
+              class="foot_icon"
+              style="width: 200px; height: 65px"
+              src="https://web.archive.org/web/20210903174711im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_200,h_65/icon-GooglePlay_1_zixjxl"
+          /></a>
+        </div>
+      </div>
+    </main>
 
     <!-- <script src="scripts/logout.js"></script> -->
 
