--- a/index.html
+++ b/index.html
@@ -171,6 +171,53 @@
         </div>
       </div>
     </div>
+    <div class="three">
+      <div class="do">
+        <h1>
+          Restaurants in
+          <br />
+          your pocket
+        </h1>
+        <p>
+          Order from your favorite restaurants & track on the go, with the
+          all-new Swiggy app.
+        </p>
+        <div class="do1">
+          <a
+            href="https://play.google.com/store/apps/details?id=in.swiggy.android"
+          >
+            <img
+              style="height: 54px"
+              src="https://web.archive.org/web/20210903175340im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,h_108/play_ip0jfp"
+            />
+          </a>
+          <a
+            href="https://itunes.apple.com/in/app/swiggy-food-order-delivery/id989540920"
+          >
+            <img
+              style="height: 54px"
+              src="https://web.archive.org/web/20210903175341im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,h_108/iOS_ajgrty"
+            />
+          </a>
+        </div>
+      </div>
+      <div class="do2">
+        <div>
+          <img
+            class="set"
+            src="https://web.archive.org/web/20210903175342im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_768,h_978/pixel_wbdy4n"
+            alt=""
+          />
+        </div>
+        <div>
+          <img
+            class="set1"
+            src="https://web.archive.org/web/20210903175343im_/https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_768,h_978/iPhone_wgconp_j0d1fn"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
     <main class="footer_1">
       <div class="div1">
         <h3>COMPANY</h3>
@@ -226,6 +273,45 @@
         </div>
       </div>
     </main>
+    <footer>
+      <img
+        className="footer_logo"
+        src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_284/Logo_f5xzza"
+        width="200px"
+        height="60px"
+      />
+      <p style="color: white; font-size: 21px">&copy; 2022 Swiggy</p>
+      <div
+        style="
+          width: 200px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        "
+        className="icons"
+      >
+        <img
+          src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_48,h_48/icon-facebook_tfqsuc"
+          width="24"
+          height="24"
+        />
+        <img
+          src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_48,h_48/icon-pinterest_kmz2wd"
+          width="24"
+          height="24"
+        />
+        <img
+          src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_48,h_48/icon-instagram_b7nubh"
+          width="24"
+          height="24"
+        />
+        <img
+          src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_48,h_48/icon-twitter_gtq8dv"
+          width="24"
+          height="24"
+        />
+      </div>
+    </footer>
 
     <!-- <script src="scripts/logout.js"></script> -->
 
