--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         alt="Loading..."
       />
     </div> -->
-    <div class="drawer">
+    <div id="drawer1" style="display: none" class="drawer">
       <div class="drawer-align">
         <div class="login_form">
-          <div class="mb-5">
+          <div onClick="closeDrawer()" style="cursor: pointer" class="mb-5">
             <svg
               width="30"
               height="30"
@@ -94,18 +94,100 @@
             />
           </div>
           <form id="loginForm">
-            <!-- <div id="sign-in-button"></div> -->
             <input
               type="text"
               class="Number_input"
-              autofocus="true"
-              spellcheck="{false}"
               id="inputEmailOrUser4"
               name="emailorusername"
               placeholder="Email or Username"
             />
-            <div id="email-validation" class="text-danger"></div>
+            <!-- <div id="email-validation" class="text-danger"></div> -->
             <br />
+            <input
+              type="password"
+              class="Number_input"
+              autofocus="true"
+              name="password"
+              placeholder="Password"
+            />
+            <!-- <div id="password-validation" class="text-danger"></div> -->
+            <div id="final-validation-login" class="text-danger"></div>
+            <button type="submit" class="login_btn">Login</button>
+          </form>
+          <div class="foot_text">
+            <p>
+              By clicking on Login, I accept the terms & Conditions & Privacy
+              Policy
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="drawer2" style="display: none" class="drawer">
+      <div class="drawer-align">
+        <div class="login_form">
+          <div onClick="closeDrawer()" style="cursor: pointer" class="mb-5">
+            <svg
+              width="30"
+              height="30"
+              viewBox="0 0 48 48"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect width="48" height="48" fill="white" fill-opacity="0.01" />
+              <path
+                d="M14 14L34 34"
+                stroke="#333"
+                stroke-width="1"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M14 34L34 14"
+                stroke="#333"
+                stroke-width="1"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+          <div class="left_div">
+            <h2>Sign up</h2>
+            <div style="width: 190px; margin-top: 5px"></div>
+            <p class="link_register">
+              or
+              <a style="cursor: pointer"> login to your account </a>
+            </p>
+          </div>
+          <div
+            style="width: 20px; height: 3px; background-color: #101003"
+          ></div>
+          <div class="right_div">
+            <img
+              src="https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto/Image-login_btpq7r"
+              alt=""
+              class="food_wrap"
+            />
+          </div>
+          <form id="signupForm">
+            <!-- <div id="sign-in-button"></div> -->
+            <input
+              type="email"
+              class="Number_input"
+              id="inputEmail4"
+              name="email"
+              placeholder="Email"
+            />
+            <div id="email-validation" class="text-danger"></div>
+            <!-- <br /> -->
+            <input
+              type="string"
+              class="Number_input"
+              autofocus="true"
+              id="inputUsername4"
+              name="username"
+              placeholder="Username"
+            />
             <input
               type="password"
               class="Number_input"
@@ -115,9 +197,17 @@
               placeholder="Password"
             />
             <div id="password-validation" class="text-danger"></div>
+            <input
+              type="password"
+              class="Number_input"
+              autofocus="true"
+              name="confirmPassword"
+              id="inputConfirmPassword4"
+              placeholder="Confirm Password"
+            />
+            <div id="confirm-validation" class="text-danger"></div>
             <div id="final-validation" class="text-danger"></div>
-            <button type="submit" class="login_btn">Login</button>
-
+            <button id="signup" type="submit" class="login_btn">Sign up</button>
             <!-- <input type="submit" value="CONTINUE" class="login_btn" /> -->
           </form>
           <div class="foot_text">
@@ -144,7 +234,7 @@
             <button id="loginopen">Login</button>
           </div>
           <div>
-            <button id="signupopen">Sign up</button>
+            <button id="signupopen">SignUp</button>
           </div>
         </nav>
         <div class="animation">
@@ -398,6 +488,9 @@
 
     <!-- <script src="scripts/logout.js"></script> -->
     <script src="scripts/login.js"></script>
-    <!-- <script src="scripts/script.js"></script> -->
+    <script src="scripts/validation.js"></script>
+    <script src="scripts/signup.js"></script>
+
+    <script src="scripts/script.js"></script>
   </body>
 </html>
