--- a/index.html
+++ b/index.html
@@ -497,6 +497,7 @@
     <script src="scripts/validation.js"></script>
     <script src="scripts/signup.js"></script>
     <script src="scripts/logout.js"></script>
+    <script src="scripts/geolocation.js"></script>
 
     <script src="scripts/script.js"></script>
   </body>
