cart option added

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
     <div class="split">
       <div class="left">
-        <nav class="d-flex flex-row align-items-center justify-content-center">
+        <nav class="d-flex flex-row align-items-center justify-content-between">
           <a class="navbar-brand" href="/">
             <img
               src="images/Swiggy_Logo_9.png"
